[tool.poetry]
name = "cryptopulse"
version = "0.1.0"
description = ""
authors = ["Anton <ieasycat@hotmail.com>"]
license = "MIT"
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
